# genetic-algorithm-tsp-api

./: Cargo.toml
.github/workflows/: code_cov.yml  pr_clippy.yml
src/: lib.rs  main.rs  tsp_solver.rs
tests/test-data/: 15_cities.txt  29_cities.txt  6_cities.txt  optimal_solutions.txt
